Add some more browsers to zuul tests

--- a/.zuul.yml
+++ b/.zuul.yml
@@ -3,3 +3,9 @@ ui: mocha-bdd
 browsers:
   - name: chrome
     version: latest
+  - name: ie
+    version: latest
+  - name: firefox
+    version: latest
+  - name: safari
+    version: latest
