--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "test": "bin/test"
   },
   "devDependencies": {
+    "es5-shim": "^4.0.3",
     "jscs": "~1.3.0",
     "jshint": "~2.4.4",
     "mocha": "~1.17.1",
+    "phantomjs": "^1.9.10",
     "zuul": "^1.11.0"
   },
   "author": "Evan Solomon <evan.solomon@medium.com>",
